--- a/hobbies.html
+++ b/hobbies.html
@@ -7,7 +7,7 @@
         <title></title>
         <meta name="Hobbypage" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="CSS/styles.css">
         <h1>Hobby page</h1>
     </head>
     <strong>These are my hobbies</strong>
