--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>arctan Studio</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="CSS/styles.css">
     <h1><strong>welcome to arctan!</strong></h1>
     <p></p>
 
