--- a/inputs.html
+++ b/inputs.html
@@ -7,7 +7,7 @@
         <title></title>
         <meta name="Input" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="CSS/styles.css">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <p>Time to get some input</p>
